network/nat_gatway.tf
resource "aws_nat_gateway" "my_nat_gateway" {
  allocation_id = aws_eip.my_eip.id
  subnet_id     = aws_subnet.subnet_public[0].id
}

resource "aws_eip" "my_eip" {
  tags = {
    Name = "elastic_ip"
  }
}
